k8s/app/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: ehsanullahkhan/fastapi-helloworld:crud-mysql # Replace with your actual registry/repo if pushing to Docker Hub
        entryPoint: [ "python", "app.py" ]
        ports:
        - containerPort: 5000
