k8s/app/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: sample
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
