k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: sample
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
  - hosts:
    - <host>
  rules:
  - host: <host>
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
